unstable sorting order

--- a/localizations/en.json
+++ b/localizations/en.json
@@ -1,8 +1,8 @@
 [
   {
     "files": [
-      "src/a.js",
-      "src/b.js"
+      "src/b.js",
+      "src/a.js"
     ],
     "id": "BK8Xz65aua",
     "key": "ONE",
@@ -13,8 +13,8 @@
   },
   {
     "files": [
-      "src/a.js",
-      "src/b.js"
+      "src/b.js",
+      "src/a.js"
     ],
     "id": "G58yzoLjur",
     "key": "TWO",
